tdf#116516: INTERNET_PROXY_INFO always contains char* data

Regression from e80aef4e032f08ef0c4cfbb028bf83b81002f112

The InternetQueryOption has two variants: ANSI (A) and Unicode (W)
(see https://msdn.microsoft.com/en-us/library/aa385101).
INTERNET_PROXY_INFO struct we are using is defined to contain two
LPCTSTR members (see https://msdn.microsoft.com/en-us/library/aa385148).
When UNICODE is defined, InternetQueryOption expands to W variant,
and at the same time, all MS-specific generic string types (like
TCHAR or LPCTSTR) are expanded to wchar_t-based types.

So, the expectation is that InternetQueryOptionW fills the struct
with pointers to widechar strings.

But actually this is not true: InternetQueryOptionW still returns
char-based strings in the struct; so just revert partially commit
above.

Change-Id: I0facb1baf2a191f7bafdf185e684bfe741ca677a